      failures (lock_on_logon_failures can be set to a number of tries)
    * FIX: better error message in case of exception in SNMP handling
    * Column Perf-O-Meter is now sortable: it sorts after the *first*
      performance value. This might not always be the one you like, but
      its far better than nothing.
    * logwatch: Logwatch icon no longer uses notes_url

    Checks & Agents:
    * esx_hostystem multipath: criticize standby paths only if not equal to active paths
    * mk_logwatch: fixed bug when rewriting logwatch messages

    WATO:
    * Allow to configure check-/retry_interval in second precision

    Checks & Agents:
    * lnx_if: Fixed crash on missing "Address" field
    * viprinet_router: Now able to set required target state via rule
    * windows_agent: Now available as 64 bit version
    * agent_vsphere: fix problem where sensors were missing when
      you queried multiple host systems via vCenter
    * apache_status: fix exception if parameter is None
    * cached checks: no longer output cached data if the age of the
                     cache file is twice the maximum cache age
    * windows agent: no longer tries to execute directories
    * FIX: esx_vsphere_datastores: Fix incomplete performance data and Perf-O-Meter
    * fileinfo: no longer inventorize missing files(reported by windows agent)

    Notifications:
    * Flexible Notification can now filter service levels
    * FIX: check_tcp corrected order of parameters in definition

    Event Console:
    * New global setting "force message archiving", converts the EC into
      a kind of syslog archive
    * FIX: fix layout of filter for history action type

1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins
    * New variable host_check_commands, that allows the definition of
      an alternative host check command (without manually defining one)